<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="NotSibling">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            android:layout_alignParentTop="true"/>

        <!-- Carré contenant le texte -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <FrameLayout
                android:id="@+id/textContainer"
                android:layout_width="300dp"
                android:layout_height="300dp"
                >

                <TextView
                    android:id="@+id/Text_game"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Text_game"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />
            </FrameLayout>
            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:visibility="gone"
                android:layout_gravity="bottom">

                <!-- Boutons pour les choix -->
                <Button
                    android:id="@+id/choice1"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:text="@string/choice1"/>

                <Button
                    android:id="@+id/choice2"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:text="@string/choice2"/>

                <Button
                    android:id="@+id/choice3"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:text="@string/choice3"/>

                <Button
                    android:id="@+id/choice4"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:text="@string/choice4"/>

            </GridLayout>
            <TextView
                android:minHeight="100dp"
                android:id="@+id/swipeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@color/blue"
                android:text="Swipe à gauche pour afficher les choix" />


            <GridLayout
                android:visibility="gone"
                android:id="@+id/counterGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="1"
                android:layout_below="@id/swipeView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/counterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    />

            </GridLayout>
            <Button
                android:visibility="gone"
                android:id="@+id/circleButton1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_button"
                android:onClick="incrementCounter"
                android:layout_columnWeight="1" />

        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
